cmake_minimum_required(VERSION 3.10)

set(PROJECT_NAME NiftiVTK)
project(${PROJECT_NAME})
 
FIND_PACKAGE(ITK REQUIRED)
INCLUDE(${ITK_USE_FILE})

FIND_PACKAGE(VTK REQUIRED)
INCLUDE(${VTK_USE_FILE})
 
ADD_EXECUTABLE(${PROJECT_NAME} src/main.cxx)
TARGET_LINK_LIBRARIES(${PROJECT_NAME}
  ${Glue} ${VTK_LIBRARIES} ${ITK_LIBRARIES})

SET(CMAKE_CXX_FLAGS_RELEASE "-Wall -O2")
SET(CMAKE_CXX_FLAGS_DEBUG  "-Wall -O0 -g")
